Add country filter to regions endpoint
